# Figures

./: CMakeLists.txt  MakeFile  README.md  main.cpp
CPP/: Circle.cpp  Cub.cpp  CustomForm.cpp  Figure.cpp  RandomForm.cpp  Rect.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp
Include/: Circle.h  Cub.h  CustomForm.h  Figure.h  RandomForm.h  Rect.h  Rectangle.h  Shapes.h  Square.h  Triangle.h
